--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
+    "js-levenshtein": "^1.1.4",
     "mariasql": "^0.2.6",
     "node-nlp": "^2.3.0",
     "nodemon": "^1.18.6",
